--- a/src/Sample/res/layout/activity_main.xml
+++ b/src/Sample/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:cn="http://schemas.android.com/apk/res/com.mindpin.android.circlebutton.sample"
+    xmlns:cb="http://schemas.android.com/apk/res/com.mindpin.android.circlebutton.sample"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
@@ -12,8 +12,8 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/ic_action_tick"
-        cn:bg_color="#99CC00"
-        cn:pressed_ring_width="8dp"
+        cb:bg_color="#99CC00"
+        cb:pressed_ring_width="8dp"
         />
     <com.mindpin.android.circlebutton.CircleButton
         android:id="@+id/button2"
@@ -21,8 +21,8 @@
         android:layout_height="64dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/button1"
-        cn:bg_color="#FFFF00"
-        cn:pressed_ring_width="10dp"
+        cb:bg_color="#FFFF00"
+        cb:pressed_ring_width="10dp"
         />
     
     <com.mindpin.android.circlebutton.CircleButton
@@ -31,10 +31,10 @@
         android:layout_height="64dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/button2"
-        cn:bg_color="#FFAC99"
-        cn:text="一个按钮"
-        cn:text_size_dp="10dp"
-        cn:pressed_ring_width="10dp"
+        cb:bg_color="#FFAC99"
+        cb:text="一个按钮"
+        cb:text_size_dp="10dp"
+        cb:pressed_ring_width="10dp"
         />
     
     <com.mindpin.android.circlebutton.CircleButton
@@ -43,7 +43,7 @@
         android:layout_height="64dp"
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/button1"
-        cn:text_color="#00ff00"
+        cb:text_color="#00ff00"
         />
     
     <com.mindpin.android.circlebutton.CircleButton
